before write to FB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">projectTranslator</string>
     <string name="display_translation_preview">Translation</string>
     <string name="shared_preference_name">mySharedPref</string>
+    <string name="firebase_user_setting">usersSettings</string>
+    <string name="firebase_user_words">usersWords</string>
+    <string name="firebase_user_vocabulary_options">usersVocabularyOptions</string>
 </resources>
